# rag-mcp-telegram

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
notes/: docker_cheatsheet.md  git_workflow.md  http_basics.txt  oidc_pkce.md  openrouter_headers.md  rag_basics.md
scripts/: run_bot.py  run_rag.py
src/app/: config.py  main.py
src/app/api/: client.py
src/app/llm/: openrouter_client.py
src/app/rag/: rag.py
src/app/telegram/: bot.py
